# human-sensing

./: .gitignore  CMakeLists.txt  README_OPENFACE.org  icubcontrib-config-uninstall.cmake  install_manifest.txt
scripts/: yarpOpenFace.xml
test_data/: s_data_0  s_data_1  s_data_2  s_data_3
yarpOpenFace/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  GPATH  yarpOpenFace.thrift
yarpOpenFace/app/conf/: yarpOpenFace.ini
yarpOpenFace/app/scripts/: yarpOpenFace.xml
yarpOpenFace/include/: GPATH  GRTAGS  GTAGS  yarpOpenFace.h  yarpOpenFace.h~  yarpOpenFace_IDLServer.h
yarpOpenFace/lib/local/CppInerop/: LandmarkDetectorInterop.h
yarpOpenFace/lib/local/FaceAnalyser/src/: Face_utils.cpp
yarpOpenFace/lib/local/GazeAnalyser/include/: GazeEstimation.h
yarpOpenFace/lib/local/GazeAnalyser/src/: #GazeEstimation.cpp#  GazeEstimation.cpp
yarpOpenFace/lib/local/LandmarkDetector/include/: LandmarkCoreIncludes.h  LandmarkDetectorModel.h
yarpOpenFace/lib/local/LandmarkDetector/src/: #LandmarkDetectorModel.cpp#  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  PDM.cpp
yarpOpenFace/lib/local/Utilities/include/: #Visualizer.h#  Visualizer.h  yarpImageCapture.h  yarpImageCapture.h~  yarpSequenceCapture.h~
yarpOpenFace/lib/local/Utilities/src/: ImageCapture.cpp  SequenceCapture.cpp  VisualizationUtils.cpp  Visualizer.cpp  yarpImageCapture.cpp  yarpImageCapture.cpp~  yarpSequenceCapture.cpp~
yarpOpenFace/share/ICUBcontrib/modules/: yarpOpenFace.xml
yarpOpenFace/src/: main.cpp  yarpOpenFace.cpp  yarpOpenFace.cpp~  yarpOpenFace_IDLServer.cpp
